--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,14 +5,40 @@
 
 trigger:
 - main
+- build
 
-pool: myAgentPool
+variables:
+  # Azure Resource Manager connection created during pipeline creation
+  azureServiceConnectionId: 'myServiceConnection'
+  
+  # Web app name
+  webAppName: 'udacity-flask-service'
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+  # Project root folder. Point to the folder containing manage.py file.
+  projectRoot: $(System.DefaultWorkingDirectory)
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+stages:
+- stage: Build
+  displayName: Build stage
+  jobs:
+  - job: BuildJob
+    pool: myAgentPool
+    steps:    
+    - script: |
+        export PATH=$HOME/.local/bin:$PATH
+        python3.9 -m pip install -r requirements.txt
+      workingDirectory: $(projectRoot)
+      displayName: 'Step - Install requirements.txt'
+
+    - task: ArchiveFiles@2
+      displayName: 'Archive files'
+      inputs:
+        rootFolderOrFile: '$(projectRoot)'
+        includeRootFolder: false
+        archiveType: zip
+        archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+        replaceExistingArchive: true
+
+    - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+      displayName: 'Upload package'
+      artifact: drop
